[gd_scene load_steps=4 format=3 uid="uid://j55f1d6jt37f"]

[ext_resource type="Script" path="res://levels/level_manager.gd" id="1_4b7mh"]
[ext_resource type="Script" path="res://main.gd" id="1_75oyl"]
[ext_resource type="PackedScene" uid="uid://cbvk0ycsimjw" path="res://player/player.tscn" id="2_gdeet"]

[node name="Main" type="Node"]
script = ExtResource("1_75oyl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(55, 295)
position_smoothing_enabled = true
position_smoothing_speed = 7.0
drag_vertical_enabled = true
drag_top_margin = 0.25
drag_bottom_margin = 0.1
editor_draw_limits = true

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("1_4b7mh")

[node name="Player" parent="." instance=ExtResource("2_gdeet")]
position = Vector2(54, 349)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
position = Vector2(1, -54)
remote_path = NodePath("../../Camera2D")
